Add Test, not yet finished.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Elevator VERSION 0.1.0)
 
-include(CTest)
-enable_testing()
-
 file(GLOB sources ./src/*.cpp ./inc/*.h)
 set(${PROJECT_NAME} ${sources})
 
+set(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
@@ -16,6 +14,9 @@ find_package(Threads REQUIRED)
 add_executable(${PROJECT_NAME} ${sources})
 target_include_directories(${PROJECT_NAME} PRIVATE ./inc)
 target_link_libraries(${PROJECT_NAME} Threads::Threads)
+
+
+add_subdirectory(unit_test)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
